# ft-llms-tillicum

./: .gitignore  README.md  eval.slurm  ft.slurm  inference.slurm  pyproject.toml  run-16-gpus.slurm  run-2-gpus.slurm  train_16_gpus.slurm  train_2_gpus.slurm  train_4_gpus.slurm  train_8_gpus.slurm
configs/: llama3_2_1B_cuda.yaml  llama3_2_3B_cuda.yaml
scripts/: dataset.py  eval.py  inference.py  models.py  prepare_dataset.py
src/: .gitignore
src/configs/: llama3_2_1B_mps.yaml
src/recipes/: lora_finetune_single_device_mps.py
src/scripts/: dataset.py  inference.py  models.py
tasks/: inference.slurm
