[project]
name = "ft-llms-tillicum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "peft>=0.17.1",
    "torch>=2.9.0",
    "torchao>=0.14.1",
    "torchtune>=0.6.1",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
